--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -43,3 +43,9 @@
 .card-ferias {
   background-image: url('https://images.unsplash.com/photo-1533508680267-2f36a7de5527?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=654&q=80');
 }
+
+@media only screen and (max-width: 720px) {
+  .cards {
+    width: 400px;
+  }
+}
