--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   background-color: #598ded;
   font-size: 16px;
+  box-shadow: 1px 1px 10px rgb(0 0 0 / 20%);
 }
 
 .footer h2 {
@@ -35,5 +36,14 @@
 @media only screen and (max-width: 720px) {
   .footer {
     text-align: center;
+  }
+
+  .footer form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer form #form-submit {
+    margin-top: 5px;
   }
 }
